# codefermenter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: poetry-package-dev.yml  poetry-package.yml
codefermenter/: __main__.py  compile.py  constant.py  enums.py  exceptions.py  models.py
codefermenter/file_builder/: __init__.py  abstract_builder.py  cython_builder.py
codefermenter/file_cleaner/: __init__.py  abstract_cleaner.py  default_cleaner.py
codefermenter/file_preparing/: __init__.py  abstract_preparing.py  direct_preparing.py  helpers.py  recursive_preparing.py
codefermenter/input_args/: __init__.py  app_args.py  args_helper.py  command_manager.py
codefermenter/input_args/command_models/: __init__.py  command_abstract.py  command_direct.py  command_recursive.py
example/: Dockerfile  README.md
tests/: test_input_args.py
tests/test_data/: data_migrate.py
