[tool.poetry]
name = "codefermenter"
version = "0.1.0"
description = ""
authors = ["Erik <dubovyk.erik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cython = "^3.0.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
